# tracker

./: .gitignore  .gitmodules  README.md  build.sh  conda_config.sh
src/: CMakeLists.txt
src/custom_tracker/: CMakeLists.txt
src/custom_tracker/src/: config.hpp  config.hpp.in  main.cpp
src/cv_tracker/: CMakeLists.txt
src/cv_tracker/src/: config.hpp.in  main.cpp
src/libcore/: CMakeLists.txt
src/libcore/cmake/: CoreConfig.cmake.in
src/libcore/include/core/: exception.hpp
src/libcore/src/: exception.cpp
src/libterminal/: CMakeLists.txt
src/libterminal/cmake/: TerminalConfig.cmake.in
src/libterminal/include/terminal/: terminalparser.hpp  terminalparser2.hpp
src/libterminal/src/: terminalparser.cpp  terminalparser2.cpp
src/libtime/: CMakeLists.txt
src/libtime/cmake/: TimeConfig.cmake.in
src/libtime/include/time/: basetimer.hpp  videotimer.hpp
src/libtime/src/: basetimer.cpp  videotimer.cpp
src/libtracker/: CMakeLists.txt  remove
src/libtracker/cmake/: TrackerConfig.cmake.in
src/libtracker/include/tracker/: tracker.hpp  trackerfile.hpp
src/libtracker/src/: tracker.cpp  trackerfile.cpp
src/libutil/: CMakeLists.txt
src/libutil/cmake/: UtilConfig.cmake.in
src/libutil/include/util/: ccvconverter.hpp  dlibconverter.hpp  roi.hpp  roiselector.hpp  scaler.hpp  userinteraction.hpp
src/libutil/src/: ccvconverter.cpp  dlibconverter.cpp  roi.cpp  roiselector.cpp  scaler.cpp  userinteraction.cpp
